syntax = "proto3";

package ai.metathings.service.deviced;

import "validate/validate.proto";

import "model.proto";

message AddDevicesToFirmwareHubRequest {
	OpFirmwareHub firmware_hub = 1 [(validate.rules).message.required = true];
	repeated OpDevice devices = 2 [(validate.rules).repeated = {min_items: 1}];
}
